--- a/shared/care/responsibility/tips/責任を負う.md
+++ b/shared/care/responsibility/tips/責任を負う.md
@@ -1,3 +1,5 @@
 うまくいかなかったときのことまで考えて回避策を練っておくのが責任というもの。うまくいかなかったら抜けるとか、辞めるとかは責任のある態度とは言えない。
 
 「お前も俺もどうせ責任を取るしか仕事がないんだ。だったら、面白い結果の責任を取ろう。」『ドラハチ』
+
+「責任を負いたくない」んじゃなくて、「たかが年収1000万くらいで責任を負いたくない」んだよな。
