--- a/shared/community/tips/迷惑.md
+++ b/shared/community/tips/迷惑.md
@@ -3,3 +3,7 @@
 世の中は影響を常に与え合っていて、思い通りにはならない。
 
 迷惑をかけないと思っても迷惑をかけているのを自覚する方が大事。
+
+迷惑をかけてもその分、公共の利益として相手にも還元されたり直接お返しをしたりすれば別にいい。でもそれができない、あるいはそこまで関係が近くない相手だと迷惑はそのまま損害になる。
+
+関係が近い相手に迷惑とかハラスメントとかを主張すると捨てられる。そこはコミュニケーションで解決するのが社会性だから。
