--- a/shared/development/tips/発達障害.md
+++ b/shared/development/tips/発達障害.md
@@ -3,3 +3,11 @@
 自分の強みがあって別に合わせなくても生きていけるなら関係ないけど、個性もなくて定型発達の下位互換でしかないなら障害になる。
 
 自分で「発達障害です」って大っぴらに自己紹介する人はキチガイなので離れた方がいい。「私は配慮しないけどあなたは私に配慮してね」と言っている。
+
+ASDとかADHDとか公表してる人はどうせ「障害者なら他人に迷惑かけてもいい」と思ってる。
+
+ASDは刺激に弱くて、ADHDは刺激を求める。
+
+ADHDによくある貧乏ゆすりや机を叩くような動作が癖になっていると単純に周囲の邪魔になるので、ストレスボールを握るとか周囲の邪魔にならない癖に置き換えたほうがいい。
+
+特性自体が問題なのではなくて、特性を活かせる場所に自分を置いてないのが問題。
