--- a/shared/human/being/人生.md
+++ b/shared/human/being/人生.md
@@ -52,3 +52,9 @@ https://x.com/cicada3301_kig/status/1914565545967428076?s=46
 「ボクの人生ですよ！？」（宝鐘マリン）
 
 「時には本能に...遺伝子に逆らい、心に従うのが人間なのでしょう」（スパロボY）
+
+人生が上手い人:
+
+- 完璧主義じゃない（とりあえず一旦早く終わらせる）
+- 試行回数が多い
+- 不安や不満をエネルギーにする
