--- a/shared/influence/people/人を動かす.md
+++ b/shared/influence/people/人を動かす.md
@@ -85,7 +85,10 @@ SNSなどで間接的に情報を得て影響を受けることもある。
 人を変えるのは難しいけど、不可能ではない。そもそも人は変われる。変われるのが人だ。
 でも、人を直接変えようとしても変わらない。人を変えたかったら、間接的に影響を与えないといけない。自分ができることの一つは、障害を取り除くこと。
 
-監視する（してほしいこと以外、特にしてほしくないことを妨害する）、
-教育する（してほしいことを後押しする）、
-障害を取り除く、
+- 監視する（してほしいこと以外、特にしてほしくないことを妨害する）
+- 教育する（してほしいことを後押しする）
+- 障害を取り除く（してほしいことを選びやすくする）
+
 の三段階がある。
+
+自分を変えることに比べて、他人を変えるのはコストが高い。
