--- a/shared/job/hunting/就職.md
+++ b/shared/job/hunting/就職.md
@@ -8,3 +8,5 @@ https://www.vorkers.com/
 就職活動ではまず会社に入る気があるかどうか決めて、入る時だけ福利厚生とかの現実的な話を相談する。
 
 就職はしなくても、仕事はするといい。
+
+就職だとマネージャー経験が将来性につながりがち。でも逆に誰でもマネージャーにしとけばいいと思ってる会社に将来性を感じない。
