--- a/shared/management/principles/失敗の損失を小さくする.md
+++ b/shared/management/principles/失敗の損失を小さくする.md
@@ -15,3 +15,7 @@
 
 失敗の損失を小さくするのもマネジメント。
 失敗しないようにするんじゃなくて、失敗しても死なないようにする。
+
+コストは後から増やせばいい。
+
+コストはいくらでも増えるので、最初は少なく始める。ただ、速度のほうが大事。コストをかけて速度を上げられるならコストをかける。品質とかくだらないことにコストをかけない。
