--- a/shared/risk/lucky/運.md
+++ b/shared/risk/lucky/運.md
@@ -150,3 +150,8 @@ https://youtu.be/q5O8O_kwtTk
 これまでとりあえず動くとたまたま上手くいってきた人は「気持ち」とか「根性」みたいなことを言うのが好き。でも再現性がないので聞く意味がない。
 
 ラッキーは偶然ではない。
+
+「短時間で新聞の写真の枚数を数えてもらう」というリチャード・ワイズマンの実験がある。
+「運が悪い」と自認している人は間に合わなくて、「運がいい」と自認している人は2ページ目にデカデカと書いてある「枚数は43枚です」の文字に気づいて回答した、という実験。
+これは「視野が広い」のが良いのか、「信じる」のが良いのか。基本的には「良い情報を探す」という性質があると考えるのがいいかも。
+https://x.com/minerva_owl1/status/1838196304906002454
