--- a/shared/risk/lucky/運を良くする.md
+++ b/shared/risk/lucky/運を良くする.md
@@ -1,3 +1,10 @@
+- 良い機会に備える
+  - 勉強する
+- 試行回数を増やす
+  - 精神的な抵抗を減らす
+    - 失敗できるようにする
+    - ポジティブな情報を積極的に探す
+
 悪い機会に接する習慣が多ければ運は悪くなるし、逆に良い機会に接する習慣が多ければ運は良くなる。
 
 クズと付き合って、カスみたいな集まりに参加して、ゴミみたいな振る舞いをしていると運が悪くなる。選別が運を決める。
@@ -9,3 +16,8 @@
 運の良し悪しはその人の習慣からきている。
 例えば、知らない人に絡まれたり怒られたりすると思っている人が、人通りの多いところで邪魔になるような振る舞いばかりしているとか。
 運の悪さは知能の低さでもある。
+
+運が良いと言うのは、良い機会を掴むと言うこと。
+
+3回やって2回成功するより、100回やって10回成功する方が5倍優れている。
+成功は確率じゃなくて回数。
