--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -149,3 +149,9 @@
 
 セフレは含まない。
 子供を作って育てるための関係ではない。
+
+恋人は必ずしも対等の関係でなくてもいいし、心休まる場でなくてもいい。ただ、長期的にパートナーとして一緒に暮らすのであれば心休まる方がいい。そうでないなら子供だけ作ってポイするべき。
+
+男の場合、子供だけ作って捨てて母親が育てなくても別の女と子供を作るのも容易。
+
+男性は女性よりも相手を恋人として見る期間が少ないバグがある。その間に家族や友人としての地位を築かないと捨てられる。
