--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -138,3 +138,5 @@ https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
 体格や姿勢が良いのは肉体的な健康を感じさせる。これはどんな家庭の子でもやるべき。
 
 上品な所作とか言葉遣いは上品な家の子がやってるから意味がある。優先順位は低い。
+
+期待感には将来性が大事。
