--- a/shared/entertainment/examples/配信.md
+++ b/shared/entertainment/examples/配信.md
@@ -22,3 +22,5 @@
 モテた経験がないとわざわざ配信なんてやろうと思わないと思うんだけど。
 
 配信の会話は相手を楽しませるよりもリスナーを楽しませるための会話なので、相手を楽しませる会話とは違う。何人かで協力したトーク、あるいは漫才に近い。
+
+VtuberになるよりまずYouTuberを始めるべき。よりコストが低い方法を選ぶ。立ち絵だけから始めるとかも全然ある。コストは後から増やせばいい。
