--- a/shared/society/人間関係.md
+++ b/shared/society/人間関係.md
@@ -88,3 +88,6 @@ Personal vs Social
 人間関係はお金を払った方が楽。
 
 誰かのネガティブな話聞いても全く響かないなら、それはそれで愚痴とか聞くのに向いてる。
+
+人間関係は、自分にとって要らない人を切る面もあるので、人間関係を続けるための最適解が最適とは限らない。
+たとえば共通点よりも相違点こそが価値だと考える人は、共通点の話ばかりする人と付き合っても仕方ないので、相違点の話をすることで関係を切っていくのが最適になる。
