--- a/shared/trust/intimacy/tips/嫌われる人の特徴.md
+++ b/shared/trust/intimacy/tips/嫌われる人の特徴.md
@@ -1,3 +1,7 @@
+相手に好かれてなかったら嫌われている。
+
+嫌われるとか性格が悪いのは恨みを買うとかじゃなくて、恩恵がなくて相手にしてもらえなくなる。
+
 - 恩恵がない
 - また話したくならない
 
@@ -8,3 +12,6 @@
 - 会話に頭を使う
 - 鬼ごっことかに付き合わされる（小学生男子か？）
 - 気が合いすぎて喋りすぎるから逆に疲れる
+
+性格がいいというのはギバーということ。
+性格が悪いというのはテイカーということ。
