--- a/shared/assertion/根拠.md
+++ b/shared/assertion/根拠.md
@@ -138,3 +138,5 @@ explanation も参照。
 
 根拠は思考の文脈ではない。
 自分の考え自体に根拠はいらないけど、それを誰かに伝えるなら根拠が必要。説得とか自己主張の文脈。
+
+人が言っている根拠は基本的に嘘だと思っていい。信じられるのは科学的に何度も検証されたものだけ。
