--- a/shared/government/legal/刑罰.md
+++ b/shared/government/legal/刑罰.md
@@ -8,3 +8,5 @@
 ちゃんと警察が取り締まらないと私刑が増える。
 
 罪があってもなお慕われる人は処刑できない。処刑すると反乱が起きる場合もあるし、反乱にまではならなくても王の方が見放されることがある。
+
+子供の罰金を親が払う仕組みにしてはいけない。執行猶予をつけた上で大人になった時の稼ぎの中から賠償金を行政が回収するべき。
