--- a/shared/sex/dating/tips/口説く.md
+++ b/shared/sex/dating/tips/口説く.md
@@ -16,3 +16,7 @@
 
 フィクションと違って、現実には「告白」という工程がよくない。
 むしろそれによって本当に必要な工程を欠かしてしまうこともある。
+
+告白して「保留」は優しい言い方で振られているので自覚するべき。
+
+そもそも交際していると思っているのが自分だけ、ってパターンもある。
