--- a/shared/trust/intimacy/親交.md
+++ b/shared/trust/intimacy/親交.md
@@ -18,3 +18,5 @@
 漫画でよく見るいじめっ子みたいな人は親交が得意で仲間内には好かれるけど、社会には不適合。顧客を怒らせてすぐクビになるタイプ。社会に出たら当然社交の方が重要。とはいえ、社会に出て身につけていく場合も多い。
 
 親しくなるほど、期待は重くなる。
+
+肉体的なintimacyの先が恋人、精神的なintimacyの先が友人。
