--- a/shared/care/attention/tips/関心を示す.md
+++ b/shared/care/attention/tips/関心を示す.md
@@ -150,3 +150,7 @@
 
 連絡とかは興味ではない。
 連絡をこまめにしても相手を知ることはできない。
+
+相手に関心を示して気を遣っているなら内心で見下していても関係ない。まぁ、利がなくなったら捨てると思うけど、その時まで自分も関係を楽しめばいい。
+
+他人に関心を示すけど愛情がない人もいる。
