--- a/shared/sex/dating/恋愛対象.md
+++ b/shared/sex/dating/恋愛対象.md
@@ -6,3 +6,7 @@
 目が合わないと会話するのも難しい。
 
 ヒモを飼ってる人もいるので、必ずしもステータスだけを求めているわけではない。
+
+男は守備範囲が広いからセックスはできるけど、「こいつとは子どもを育てられないな」って思ったら本命ではない。
+
+女は守備範囲が狭いけど、そもそも子どもを育てるかどうかがセックスの壁になっている場合が多い。子どもが育てられると思わないと基本的にセックスしない。本命と別れることはあってもセックスだけで関係を続けることは少ない。
