--- a/games/Street-Fighter/プレイヤーの強さ.md
+++ b/games/Street-Fighter/プレイヤーの強さ.md
@@ -1,3 +1,4 @@
+- プレッシャーに強い
 - 距離やリソースに応じた最適なコンボ選択
 - 正確な状況判断
 - 反射神経
@@ -35,3 +36,5 @@
 
 ゲージを回すのは強くなるために手をつけやすいところ。
 特に6ではDゲージが満タンのまま戦うのはDゲージが削られているのと変わらない。
+
+極めてプレッシャーの高い状況で「ここで決めたやつがヒーローだ」と思える精神性がトッププレイヤーには必要。
