--- a/shared/health/exercise/examples/ながら運動.md
+++ b/shared/health/exercise/examples/ながら運動.md
@@ -15,8 +15,12 @@
 - ジャンプ
 - わかめ腹筋 https://youtube.com/watch?v=sApABF3exFE&si=oxMsQ8QyR0LP9igj
 - かかとの上げ下げ
+- ドローイン
 
 歯磨き、料理の待ち時間、など。
+
+ただ歩いている間も呼吸筋は鍛えられる。
+あとは負荷は低いけど筋肉に力を入れるだけの筋トレならだいたいどこでも歩いたり座ったりしているときでも鍛えられる。
 
 ## 座
 
