--- a/shared/lifestyle/clothing/服のシルエット.md
+++ b/shared/lifestyle/clothing/服のシルエット.md
@@ -43,3 +43,5 @@ Iラインは体の細さを強調する。
 首は適当に首元開けばいいし、手首もサイズが合ってたら見えるはず。
 
 腰は丈が短い上着にして腰のラインを見せるか、上からベルトで絞る。
+
+Oラインは中途半端にゆったりさせるならできるだけ太いパンツとかジャケットのほうがいい。絞るとこだけしっかり絞る。
