--- a/shared/voice/training/tips/腹から声を出す.md
+++ b/shared/voice/training/tips/腹から声を出す.md
@@ -58,3 +58,5 @@ https://youtu.be/u6esSnfp_Bk?si=MHiWE6oXoJUIPVO4
 嘔吐する時の感覚に近い。
 
 尻を締める。
+
+強く吐ききったあとに力を抜くとぶはっと息が残っている呼吸なら、喉で強く吐くことはできない。喉で強く吐くと胸式呼吸になって息が残らない。
