--- a/shared/development/開発.md
+++ b/shared/development/開発.md
@@ -185,3 +185,5 @@ discovery, 発見・探索も関連する。
 自分が嫌いだからこそ変わろうとする面もある。
 
 技術ばかりでなくその応用まで知ることで、技術に新たなアイデアが入って発展することもある。広い知識を持ったほうがいい。
+
+新しく強くなっていくために、変えない芯を持つ。
