--- a/shared/engagement/誇り.md
+++ b/shared/engagement/誇り.md
@@ -100,3 +100,6 @@
 誇りを守るためには飾りも必要。たとえば会社のビルのロゴがボロボロだったり、給料が安かったりすると格好がつかない。ただ飾るというよりは、誇りを示す。
 
 人間はカスばっかりだと思っているならギブアンドテイクを意識することもないし社会へのエンゲージメントもない。
+
+帰属意識には誇りが必要。
+「雑魚が代表ヅラすんな」って思われたら誰もついてこない。
