--- a/shared/human/body/muscle/training/筋トレの負荷を調整する.md
+++ b/shared/human/body/muscle/training/筋トレの負荷を調整する.md
@@ -8,3 +8,9 @@
 休憩が短い方が負荷が高い。
 
 最初はとにかく楽な方法でも、やらないよりはいい。
+
+筋トレは回数を増やすより負荷を増やした方がいい。
+
+トレーニングには負荷に慣れるためのものと繰り返しに慣れる（精度を高める）ものがある。
+精度を高めるには、高い精度でできるだけ回数を増やす。
+負荷に回数はいらない。
