--- a/shared/love/interesting/興味.md
+++ b/shared/love/interesting/興味.md
@@ -49,3 +49,7 @@
 相手の話に興味がないということは、相手に興味がないということ。
 
 一時的に興味があって調べても、そのあとで関わることがないと思ったら記憶も理解せずに捨てることはある。
+
+自分が下手だからつまらない。
+
+「つまらない」と思ったら、まず自分が下手なんじゃないかと疑うべき。
