--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -402,3 +402,5 @@ https://x.com/ggnka_icha/status/1810274912759918858
 相手のしてくれたことに対して、無視したり、そもそも気づかなかったりするのは尊重してない。
 
 自分で自分を舐めている、自己肯定感がない人は、他人からも舐められやすい。
+
+畏怖よりも興味と尊敬を持って吸収する。
