--- a/shared/success/失敗.md
+++ b/shared/success/失敗.md
@@ -92,3 +92,6 @@ https://style.nikkei.com/article/DGXMZO40029590V10C19A1000000/?page=2
 失敗は修正するのではなく、失敗した方法に適した状況を用意して成功するパターンも認識するところから始める。その方法も選択肢の一つに置きながら、その上に選択肢を増やす。
 
 失敗しないように意識しすぎると失敗する。
+
+新しい仮説がないと失敗すらできない。
+失敗というのは、新しい仮説を検証して初めて言えるものだ。
