--- a/shared/training/練習の順序.md
+++ b/shared/training/練習の順序.md
@@ -50,3 +50,6 @@
 技術習得には順序がある。
 必要な条件を満たしてないのに一段飛ばしで進もうとすると、変な癖がついて下手になったり、怪我をしたりする。
 負荷の場合も、自分が耐えられない負荷をかけても意味がない。少しずつ負荷を上げて慣らす。
+
+バレーやテニスでサーブを安定させるにはまずサーブトスを安定させる。
+同じように、まず何かを上手くやるには別の何かを上手くやるのが先ってことが技術にはよくある。順序を決めて一つずつ達成する。ダメなら前の段階でエラーを出して無駄になる前に止める。
