--- a/shared/achievement/結果を求める.md
+++ b/shared/achievement/結果を求める.md
@@ -1,1 +1,3 @@
 結果を求めることよりも一歩を進めることが重要。結果は結果でしかない。一歩一歩進んで先にしか結果はない。結果が出なくても歩みを止めてはいけない。
+
+自分がコントロールできるのは自分の思考と行動だけ、と考えるのがタスクフォーカス。結果はどうにもならない。結果はついてくるもの。影響も同じ。間接的にしか変えられない。
