--- a/shared/devotion/tips/緊張しないようにする.md
+++ b/shared/devotion/tips/緊張しないようにする.md
@@ -2,3 +2,7 @@
 「緊張しないように」と考えるのでは、集中を散らせていない。
 
 大きな声はある程度リラックスしていないと出せない。緊張に慣れるというより、大きな声を出せるように練習することで体を緩める。
+
+「今まで負けていい試合はあった？」『ハイキュー‼︎』
+
+自信がないのにプレッシャーを感じるのはおかしい。
