--- a/shared/game/competitive/優劣.md
+++ b/shared/game/competitive/優劣.md
@@ -27,3 +27,10 @@
 - 余裕がない
 - 勉強ができない
 - 仕事ができない
+
+優劣は「測る」もので、それには物差しが必要だ。
+勝ち負けとは違う。
+
+物差し次第で優劣は変わる。
+ライオンは大きくて力もあるけど本気で逃げるインパラに追いつけない。
+人間は足が遅いけど2時間追いかけ回せばどんな獲物も捕まえられる。
