--- a/shared/care/関心.md
+++ b/shared/care/関心.md
@@ -1,7 +1,7 @@
 # Attention
 
 関心、注目、注意。
-
+相手と関わろうとすること。
 目を向けること、目を離さないこと。
 
 利があるか、害があるか、で対象を見る。
@@ -221,3 +221,10 @@ careの関心は注意の方が近いかも。mindとも近い。
 相手のことをほとんど知り尽くして興味も絶えたと思っても長期的になんだかんだ腐れ縁を続けていくのは興味や関心よりもお互いの信頼。お互いに恩がある。中期的な関係でお互いに助け合うのが大事。
 
 警戒心も関心ではある。
+
+関心というのは、根本的に相手と関わろうとすること。目を離さないこと。
+警戒して目を離さないこともある。
+
+関心を忘れられないと逃げた意味がない。逃げ切ったとは言えない。逃げても関心があるなら何らかの不安要素がある。
+
+恨みや憎しみも関心。
