--- a/shared/people/tips/人間の価値.md
+++ b/shared/people/tips/人間の価値.md
@@ -15,3 +15,5 @@
 犯罪者なんて社会にとってはいない方がいいんだから、無駄に生かすのではなく使い潰してもいいのでは？
 
 犯罪者であっても人間にはとても高い価値がある。人体実験や奴隷労働をはじめ、趣味で弄ぶとか、臓器にも需要がある。犯罪者というだけでその価値を使わずに牢屋で囲って無駄にするのはもったいない。
+
+人間を数字として使う方法がわかると人間の価値が高まる。
