--- a/shared/sex/性的魅力.md
+++ b/shared/sex/性的魅力.md
@@ -48,3 +48,6 @@
 
 股間の毛が少ないのは未熟な時期の特徴なので、その方がいいって人はロリコンかも。
 ただ、毛がボサボサになっているのは歳をとりすぎた象徴とも言える。
+
+女性が「成熟した」と言えるのは子どもが比較的安全に産めるようになった時。
+子どもが産めなくなったらもう枯れている。
