--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -196,3 +196,5 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 みたいなのは社交ができないから獣として扱われる。
 
 つまんない友達を呼ぶ人もつまんないと思われる。
+
+社交ができてないのは、まずその場の空気を良くしようとしてない人。飽きたら携帯見るとか。パッと時間やメッセージを確認したりするのはいいけど、飽きた感を出したらダメ。
