--- a/shared/society/社交性.md
+++ b/shared/society/社交性.md
@@ -62,3 +62,5 @@ https://ja.wikipedia.org/wiki/%E7%A4%BE%E4%BC%9A%E6%8A%80%E8%83%BD
 - 喋りすぎる
 - 話しかけられたら喋るけど、話しかけられない
 - 大人数だと喋らない
+
+積極的に人と関わりたがるけど下手、って人もいる。
