--- a/shared/trust/reciprocity/恩.md
+++ b/shared/trust/reciprocity/恩.md
@@ -53,3 +53,5 @@ favor を恩とする場合がある。
 大きな問題から救ってもらったら大きな恩を感じるし、よく助けてもらうとか贈り物をもらうみたいなのも恩を感じる。
 
 金や物の貸し借りはトラブルの元になるけど、それも好かれたい時はリスクを取ったことになる。
+
+どうやら知能が低いと受けた恩はすぐ返さないといけないらしい。
