--- a/shared/love/people/笑顔.md
+++ b/shared/love/people/笑顔.md
@@ -9,3 +9,5 @@
 意識的に笑顔を向けたりしていると無意識の時に無表情になってしまうのでできれば無意識にできるといい。まぁ、繰り返していればいずれ習慣になるだろう。
 
 歯を見せる行為は基本的に威嚇。特に人間以外の動物に対しては歯を見せない。
+
+笑顔の前に、口を大きく開いて口角を上げる練習をした方がいい。
