--- a/shared/sex/dating/tips/恋人を選ぶ.md
+++ b/shared/sex/dating/tips/恋人を選ぶ.md
@@ -58,3 +58,10 @@ https://x.com/yumene_love/status/2016643430315921460?s=12
 
 「いい男の選び方をひとつだけ挙げるなら「あなたがリラックスしてゴロゴロしているのを喜んでるかどうか」かなと」
 https://x.com/ameria86922441/status/2017838100442218779?s=12
+
+今の時代、べつに家事ができなくても子どもは育てられる。
+
+## どうでもいいこと
+
+- 家事ができる
+- 軽度の特殊な性癖（コスプレとか）
