--- a/shared/sex/セックス.md
+++ b/shared/sex/セックス.md
@@ -98,3 +98,6 @@
 セックスは行為であって、恋愛の延長とは限らない。社交とか商売でセックスすることもある。
 
 女性は心がガキでも体が大人なら価値があるので若いうちはチヤホヤしてもらえる。マンコとしてチンコが面倒を見てくれる。
+
+男性にとってのセックスは排泄行為に近い。家にトイレがなかったら外でトイレを済ませる。
+女性にとってのセックスは愛情表現でもあるけど、男性にはあまり響かない。
