--- a/shared/technique/技術.md
+++ b/shared/technique/技術.md
@@ -176,3 +176,5 @@ skillは熟練が必要な技術、techniqueは技術的な方法や過程。
 技術はtrainingの文脈でもいいけど。
 
 技術は「なんとなく使える」よりは「できることは限定的だが確実に使える」ほうがいい。どこまでできるかが完全にわかっている状態。
+
+技術は使うもの。
