--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -91,4 +91,5 @@
 「幸せになってほしい。俺以外の誰かと。」
 
 交際中の問題のほとんどはコミュニケーションの問題。
-二股も相手が許すなら別にいい。
+二股も相手が許すなら別にいい。一般的にいいか悪いかじゃなくて、相手が嫌がるかどうか。相手への気遣い。
+その上で、価値観をすり合わせて、それでも価値観が合わなかったら別れることになる。「私はこれが嫌だからやめてほしい」「どうしてもやめたくない」の繰り返し。
