--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -18,3 +18,11 @@
 既存のビジネスとしては、ランサーズやクラウドソーシングでどのような仕事が求められているか知ることもできる。求人とか見るのもいいだろう。
 https://www.lancers.jp/
 https://crowdworks.jp/
+
+まずは1000円でもいいので稼ぐ。今日稼ぐ。
+誰かがあなたにお金を払いたいと思わせる。
+
+- 今日1000円稼ぐにはどうするか？
+- 今日5万円稼ぐにはどうするか？
+
+プレイヤー、オペレーターとして稼ぐのはわかりやすいやり方ではある。始めやすい。
