--- a/shared/care/tips/関心を示す.md
+++ b/shared/care/tips/関心を示す.md
@@ -54,6 +54,7 @@
 - 面倒を見る、世話をする
 - こまめに連絡する
 - すぐに反応する
+- 自分から積極的に話しかける
 
 ## Bad
 
@@ -76,6 +77,10 @@
 「これこうなってるけど大丈夫そう？」と聞かないといけない。
 
 関心を示すときでも、評価は示さない。自分の意見は聞かれるまで表に出さない。逆に、相手の意見は積極的に聞く。人間は意見を聞いてもらいたいものだ。
+
+## 間接的な行動
+
+- 助けてあげるより、助けてもらって感謝を伝える
 
 ## その他
 
@@ -154,3 +159,7 @@
 相手に関心を示して気を遣っているなら内心で見下していても関係ない。まぁ、利がなくなったら捨てると思うけど、その時まで自分も関係を楽しめばいい。
 
 他人に関心を示すけど愛情がない人もいる。
+
+感謝と伝える時は、絶対に目を合わせるべき。
+
+気遣いは助けてあげるだけじゃなくて、相手を大切にする。
