--- a/shared/finance/資本.md
+++ b/shared/finance/資本.md
@@ -63,3 +63,8 @@ capital はどちらかというと「元手」が近い。
 
 ない袖は振れない。
 時間がなかったら今ある資本でなんとかするしかない。
+
+プレイヤーとしてトップでない人が大きく稼ぐには金持ちとつながって資本を増やすのが大事。
+融資もあるし、人を紹介してもらうこともある。
+
+資本がないと自分で稼ぐしかない。
