--- a/shared/human/being/well/自己肯定感.md
+++ b/shared/human/being/well/自己肯定感.md
@@ -52,3 +52,11 @@ Respectの文脈。
 
 自分の良いところを探しても、自分を愛しても、他人から愛されても、自己肯定感は上がらない。
 愛ではなく、リスペクトが必要。あと自分ではなく、他人や環境を愛さないといけない。
+
+自己肯定感自体は覚悟なんだけど、外から養うこともできる。
+
+関心を向けてもらうと自然と自己肯定感が養われる。
+ただ、これだけだと芯がない弱い自己肯定感ではある。
+
+条件付きの自己肯定感は条件が失われると弱い。
+真に強い自己肯定感は自分で育てるしかない。
