--- a/shared/trust/intimacy/tips/人に好かれる.md
+++ b/shared/trust/intimacy/tips/人に好かれる.md
@@ -92,3 +92,6 @@
 優しいけど遠慮して人間関係に消極的な人は、害はないけど評価は下がっていく。
 
 人に好かれても悪意というか利用しようと思って近づいてくる人もいる。
+
+助けてあげる人より、助けてもらう人の方が愛される。
+でもこれは感謝を伝えるのが大事。相手のプライドを高める。
