--- a/shared/trust/intimacy/接触.md
+++ b/shared/trust/intimacy/接触.md
@@ -64,3 +64,6 @@ communication の前に接触がある？
 誰かと親しくなるには、何らかの接触が必要。
 連絡を取る、目を合わせる、話す、体に触れる、など。
 できれば相手から接触してくるようになるといい。
+
+接触が多いかどうかは情報量で決まる。
+情報量が少ないと、接触が少ないとみなす。
