--- a/shared/trust/intimacy/tips/接触を増やす.md
+++ b/shared/trust/intimacy/tips/接触を増やす.md
@@ -1,3 +1,7 @@
 一番いいのは、物理的に近くで長い時間を過ごすこと。何も話さなくてもいい。ただ、接触の機会が増えるだけでもいい。
 
 親しくなるには、自分から接触を増やさないといけない。
+
+通話は顔を見た方が情報量が多い。
+
+会話とスキンシップみたいに複数の接触を組み合わせると情報量が増える。
