--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -26,3 +26,6 @@ https://crowdworks.jp/
 - 今日5万円稼ぐにはどうするか？
 
 プレイヤー、オペレーターとして稼ぐのはわかりやすいやり方ではある。始めやすい。
+
+小さなビジネスを始める時はセールスが問題。
+最初の顧客をどうやって見つけるか、どうやって売り込むか。
