--- a/shared/human/being/well/幸せになる.md
+++ b/shared/human/being/well/幸せになる.md
@@ -37,3 +37,5 @@
 やりたいことは、基本的にこれまで達成してきたこと、ドーパミンで快楽が得られたことでしかない。やりたいことを作りたかったら、小さな成功を繰り返してドーパミンを求めるようにしたらいい。でも、ドーパミンは得られなくなったら不幸になる。
 
 幸せじゃなくて動けない時はとりあえず散歩と甘味。
+
+幸せって生産的じゃない行為の中にあるんだよな。特にセロトニンとオキシトシンは。
