--- a/shared/influence/people/人を誘う.md
+++ b/shared/influence/people/人を誘う.md
@@ -19,3 +19,6 @@
 「都合が合わない」と言った時は、単純に断られている場合もある。
 
 金がない人は誘いづらい。
+
+誘われる側は別にコストがなくて、誘う側が一方的にコストを負っている。だから誘う人は常に良い人だ。
+ただ、「もう誘うな」って言ってるのに誘うのはただのストーカー。
