--- a/shared/sex/性的魅力.md
+++ b/shared/sex/性的魅力.md
@@ -51,3 +51,5 @@
 
 女性が「成熟した」と言えるのは子どもが比較的安全に産めるようになった時。
 子どもが産めなくなったらもう枯れている。
+
+女性が関心の強い人を好むのは子育てのためかも。女にとっては男が離れていくのがリスク。一人で子供を育てないといけなくなる。その中で優秀な男を選ぶけど、女への関心が強い人だと候補に入りやすい。
