--- a/shared/society/tips/人を覚える.md
+++ b/shared/society/tips/人を覚える.md
@@ -51,3 +51,12 @@
 人を観察してて「どうかした？」みたいに聞かれる場合は、そのとき考えてたことを素直に言うと話題になる。「印象的な顔だと思うけど何がそれを構成してるんだろ、って考えてました」とか。「顔ちっちゃいなぁって思ってました」とか。
 
 自分の場合、漢字を聞くのが人の名前を覚えやすい。文字記憶タイプかも。
+
+どこに注目するか
+
+- 相手が話したこと
+- 相手が身につけているもの
+  - ブランド
+  - 色
+  - グッズ
+- 相手が注文したもの
