--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -36,6 +36,11 @@
   - 急に大きな音を立てない
 - 相手がしたいと思っていることを、自分からやりたいと言う
 - 腰が引けていることに対して理由を与える
+- 判断を委ねない
+
+## 気遣いではないもの
+
+- 許可をとる
 
 ## その他
 
@@ -179,3 +184,7 @@
 他人への関心が気遣いの基礎になる。
 
 ノンデリはノンデリ同士で集まればあまりマイナスにならない。
+
+なんでもいいってのも気遣いとしてはマイナス。とはいえ相手のことを知らないとちょうどいい判断もできないので、相手を知るのが気遣いをさらにランクアップさせる。
+
+許可をとるのは気遣いじゃなくて、責任を押し付けるため。
