--- a/shared/lifestyle/clothing/服のシルエット.md
+++ b/shared/lifestyle/clothing/服のシルエット.md
@@ -45,3 +45,6 @@ Iラインは体の細さを強調する。
 腰は丈が短い上着にして腰のラインを見せるか、上からベルトで絞る。
 
 Oラインは中途半端にゆったりさせるならできるだけ太いパンツとかジャケットのほうがいい。絞るとこだけしっかり絞る。
+
+アウターの裾を使って、内側でAラインを作る、ということもある。
+つまり、シルエットというよりは、ラインの問題なのかも。外側だけでなく内側のラインも考える。
