--- a/shared/lifestyle/clothing/着こなし.md
+++ b/shared/lifestyle/clothing/着こなし.md
@@ -21,3 +21,27 @@ WEAR や ZOZOTOWN で着こなしを観察するのもいい。
 無地のシャツはのっぺりしやすいので、アクセサリーとかでアクセントをつけるといい。
 
 無地のシャツに合わないパンツは基本的に難しいパンツ。
+
+- 色
+  - モノトーン
+  - ナチュラル（アースカラー）
+  - ビビッド
+- シルエット
+  - レイヤリング
+- アイテム
+  - テクスチャー
+  - パターン
+  - アクセサリー
+- ブランド
+
+特に重要なところ:
+
+- 自分の生活スタイルに合わせる
+  - 季節に合わせる
+- 自分の体型に合わせる
+
+あとは好みか。
+
+- 自分の好みに合わせる
+  - 自分が好きな雰囲気
+  - 自分が好きな色
