--- a/shared/perception/color/色の属性.md
+++ b/shared/perception/color/色の属性.md
@@ -1,5 +1,14 @@
-以下の三つを色の三属性という。
+- 色調（トーン）
+  - 明度: 濃淡
+  - 彩度: 有無
+- 色相
 
-1. 明度（濃淡）
-2. 彩度（強弱）
-3. 色相
+最も彩度が高いトーンをビビッド（純色）という。
+白を少しずつ加えると明度が高く、彩度が低くなる。
+
+https://www.megasoft.co.jp/3d/colorscheme/
+
+明度は明るいとペール、暗いとダークという。
+
+彩度は色の有無といってもいい。
+彩度が低いと色がない。最も色がないのは白と黒。その中間の灰色も。
