--- a/shared/lifestyle/clothing/tips/脚を長く見せる.md
+++ b/shared/lifestyle/clothing/tips/脚を長く見せる.md
@@ -1,1 +1,20 @@
+- 厚底の靴
+- ハイウェスト
+  - タックイン
+  - 短丈のトップス
+    - 服の内側にベルトをつけてトップスの裾を巻き込んで短丈にする
+- 靴がしっかり見える丈のボトムス
+- 裾が広がったボトムス
+- 太めのボトムス
+
 トップスをボトムスに入れた方が脚は長く見える。
+
+https://youtube.com/shorts/IztmyXdMyGw?si=pMBtXHZGEhNgrpUj
+足を長く見せる
+
+https://youtube.com/shorts/s6Zy3F7Dy-M?si=SMF-7aA73v1uGsDA
+服の内側にベルトをつけてトップスの裾を巻き込んで短丈にする。
+
+タックインするより短丈の方がカジュアルに見える。丈は短いけど裾は出ている。
+
+ボトムスは横に広い方が脚長に見えるのはなんでだろう？
