--- a/shared/lifestyle/clothing/重ね着.md
+++ b/shared/lifestyle/clothing/重ね着.md
@@ -1,5 +1,7 @@
 # 重ね着
 
+レイヤリング。
+
 薄い服を何枚か重ねるほうが気温に合わせて調節しやすい。
 
 同じ色の服でも形や質感が違うものを重ねると一つの装飾になる。
@@ -10,8 +12,14 @@
 
 襟付きの上着には襟なしの下着、襟なしの上着には襟付きか襟なしの下着を合わせたい。襟は一つ。モックネックやタートルネックに襟付きのシャツジャケットとかは別にいい。
 
-- 上の上着（ダウンジャケット、コート、ブルゾン、ウィンドブレイカー）
-- 下の上着（薄手のジャケット、半袖ダウン、セーター、パーカー）
+- アウター
+  - 上の上着（ダウンジャケット、コート、ブルゾン、ウィンドブレイカー）
+  - 下の上着（薄手のジャケット、半袖ダウン、セーター、パーカー）
 - 基本のトップス（大きめのワイシャツ、長袖シャツ）
-- 下着（半袖シャツ、細身のワイシャツ）
+  - 下着（半袖シャツ、細身のワイシャツ）
 - ボトムス（ズボン）
+
+重ね着は柄と同じでテクスチャに近い。形の要素もある。
+色を重ねることもできるし、同じ色で形とテクスチャだけを変えることもできる。
+
+重ね着はシルエットの要素かも。
