--- a/games/Street-Fighter/Six/キャラの強さ.md
+++ b/games/Street-Fighter/Six/キャラの強さ.md
@@ -1,3 +1,9 @@
+## 差し合いが強い
+
+- 下がれる
+  - 無敵技で左右を入れ替えられる
+  - コンボで左右を入れ替えられる
+
 ## 攻めが強いキャラの特徴
 
 - 火力が高い（少ない攻めで倒し切れる）
@@ -48,3 +54,5 @@
 キャミィやジェイミーは攻めと守りの両面で強みのあるキャラだったけど、キャミィの入れ替えOD昇竜はさすがにナーフされた。
 
 目押しのクッソむずいコンボで火力が伸びるのは別にいいけど、ゲージ回収は他にも使えるので強すぎてまずい。ナーフされがち。
+
+左右を入れ替えるコンボを持っているキャラは下がれるのが強い。無敵もあればなお良い。
