--- a/games/shogi/将棋の学び方.md
+++ b/games/shogi/将棋の学び方.md
@@ -1,5 +1,10 @@
 # 将棋の学び方
 
+## 方針
+
+終盤から学ぶ。
+まずは詰まずに詰ますのが基本。
+
 ## 基礎知識
 
 ルールを覚える。
@@ -30,3 +35,11 @@
 - △5二玉、持ち駒飛2金1が詰み。▲5四飛から。左右にずれても同じ。
 - ▲6二馬、△5四玉、持ち駒飛2、金1が詰み。▲5六飛から。左右にずれても同じ。
 - ▲4四飛、△5一玉、持ち駒飛1、金1が詰み。▲5三飛から。左右にずれても同じ。
+
+将棋は終盤から学ばないといけない。詰み将棋が全ての基礎。相手を詰ませないと勝てない。
+
+将棋の終盤はスピード。相手の攻めを切りつつ、自分は詰めきる。
+
+将棋の中盤は駒を集めながら詰められる形を作る。
+
+将棋の序盤は駒を取られないように、自分の玉が詰みにくいように逃げたり囲ったりする。いきなり詰みが見えるなら飛ばしてもいい。
