--- a/shared/sex/tips/男女の違い.md
+++ b/shared/sex/tips/男女の違い.md
@@ -6,6 +6,8 @@
 男女の体力差は思考力の差にも繋がる。
 男同士であっても、体力があるほうが基本的によく考える余裕がある。
 
+男の価値は、雑に扱えるところ。
+
 ## Female
 
 「男は論理的、女は感情的」というのは「女は知能が低い」のマイルドな言い方。
@@ -32,6 +34,8 @@ https://x.com/karasu_pua/status/1937868155831152821?s=12
 
 女性は必須脂肪が多く、体脂肪率15%を切ると生理不順など健康に悪影響がある。
 一般的な女性の体脂肪率は30%弱。いわゆるモデル体型と言われるくらいでも20-25%はある。男性より10%くらい多いと考えるとちょうどいい。なんならアメリカだと30%以下は人口の10%しかいない。
+
+女を幸せにしたくても女は幸せになりたいと思ってない。実質不幸を求めている。
 
 ## その他
 
