--- a/shared/trust/intimacy/tips/好意を示す.md
+++ b/shared/trust/intimacy/tips/好意を示す.md
@@ -8,11 +8,14 @@
 - 関心を示す
 - 興味を示す
 - 顔や体を近づける
+  - 隣に座る
 - 帰ろうとするのを引き止める
 - スマホの画面を見せる
 - 言葉で伝える
   - 「仲良くなりたい」
   - 「好き」
+- 秘密を共有する
+- 遊びやデートに誘う
 
 ## その他
 
