--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -29,3 +29,8 @@ https://crowdworks.jp/
 
 小さなビジネスを始める時はセールスが問題。
 最初の顧客をどうやって見つけるか、どうやって売り込むか。
+
+目標は割り算で考える。
+月に5万円稼ぎたいなら月額500円で100ユーザーなのか、月額5000円で10ユーザーなのか。
+
+顧客は少ない方が、リソースを集中できる。
