--- a/shared/development/tips/発達障害.md
+++ b/shared/development/tips/発達障害.md
@@ -11,3 +11,5 @@ ASDは刺激に弱くて、ADHDは刺激を求める。
 ADHDによくある貧乏ゆすりや机を叩くような動作が癖になっていると単純に周囲の邪魔になるので、ストレスボールを握るとか周囲の邪魔にならない癖に置き換えたほうがいい。
 
 特性自体が問題なのではなくて、特性を活かせる場所に自分を置いてないのが問題。
+
+感情に起伏がない人は周りにADHDを寄せ付けない。ADHDには刺激が足りない。
