--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -308,3 +308,7 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 どういう反応を求めているのか、相手に聞いてみるのは？
 
 反応が思いつかなくて気まずかった話題は覚えておいて、ポジティブな返しを考える。
+
+馬鹿にされたときとかも笑って馬鹿にするのもユーモア。その人以外を笑わせるのが大事。
+
+ユーモアの基礎には愛がある。
