--- a/shared/sex/dating/tips/恋人を選ぶ.md
+++ b/shared/sex/dating/tips/恋人を選ぶ.md
@@ -1,3 +1,10 @@
+## どうでもいいこと
+
+- 家事ができる
+- 軽度の特殊な性癖（コスプレとか）
+
+## その他
+
 恋人を選ぶときに、相手が疲れているときの態度を知っておくのは大事。
 同棲でもいいけど、3泊とか長めの旅行に行くのもいい。
 
@@ -60,8 +67,3 @@ https://x.com/yumene_love/status/2016643430315921460?s=12
 https://x.com/ameria86922441/status/2017838100442218779?s=12
 
 今の時代、べつに家事ができなくても子どもは育てられる。
-
-## どうでもいいこと
-
-- 家事ができる
-- 軽度の特殊な性癖（コスプレとか）
