--- a/shared/health/体脂肪率の基準.md
+++ b/shared/health/体脂肪率の基準.md
@@ -1,2 +1,8 @@
+## 女性
+
 女性は必須脂肪が多く、体脂肪率15%を切ると生理不順など健康に悪影響がある。
 一般的な女性の体脂肪率は30%弱。いわゆるモデル体型と言われるくらいでも20-25%はある。男性より10%くらい多いと考えるとちょうどいい。なんならアメリカだと30%以下は人口の10%しかいない。
+
+## 男性
+
+男は体脂肪率15%で腹筋がうっすら見えるくらい。
