--- a/shared/sex/dating/tips/恋人を選ぶ.md
+++ b/shared/sex/dating/tips/恋人を選ぶ.md
@@ -67,3 +67,13 @@ https://x.com/yumene_love/status/2016643430315921460?s=12
 https://x.com/ameria86922441/status/2017838100442218779?s=12
 
 今の時代、べつに家事ができなくても子どもは育てられる。
+
+別れると後悔する女性
+
+1. 感情的に安定している
+2. エンパワーメント（支援）が得意
+3. 優しさと思いやりがある
+4. ユーモアのセンスがある
+5. 価値観や興味が似ている
+
+https://youtube.com/watch?v=SED4dF1kmZQ&si=YkAXIVfLuSENe9zv
