--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -93,3 +93,5 @@
 交際中の問題のほとんどはコミュニケーションの問題。
 二股も相手が許すなら別にいい。一般的にいいか悪いかじゃなくて、相手が嫌がるかどうか。相手への気遣い。
 その上で、価値観をすり合わせて、それでも価値観が合わなかったら別れることになる。「私はこれが嫌だからやめてほしい」「どうしてもやめたくない」の繰り返し。
+
+恋愛の期間は恋人を選ぶ期間だけど、選んだ後は評価しないで愛さないといけない。判断と同じ。判断が終わったのに迷うのは非効率。
