--- a/shared/thinking/lateral/連想.md
+++ b/shared/thinking/lateral/連想.md
@@ -16,12 +16,20 @@
 
 連想の型:
 
-- 色
-- 同じ色
-- 形
-- 同じ形
-- 柄
-- 同じ柄
+- 位置付け
+  - 同じ
+    - 同一
+    - 類似
+    - 相似
+  - 逆
+  - 裏
+  - 対偶
+- 特徴
+  - 見た目
+    - 色
+    - 形
+    - テクスチャ
+- 抽象
 
 ある要素がどんな集団に属しているか整理されていると、他の要素も検索できる。
 例えば、「宇都宮出身」と聞いて親の栃木を参照して、その子の日光の話もできる。
