--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -188,3 +188,6 @@
 なんでもいいってのも気遣いとしてはマイナス。とはいえ相手のことを知らないとちょうどいい判断もできないので、相手を知るのが気遣いをさらにランクアップさせる。
 
 許可をとるのは気遣いじゃなくて、責任を押し付けるため。
+
+生理とか病気とかで一時的に体調に引っ張られて気分が落ち込むのは仕方ない。それで気分が落ち込まないのは化け物。
+一時的な気分の落ち込みはスルーしてあげるのも気遣いだ。
