--- a/shared/health/exercise/tips/脂肪を落とす.md
+++ b/shared/health/exercise/tips/脂肪を落とす.md
@@ -1,3 +1,10 @@
+## 原則
+
+- 摂取するエネルギーを消費するエネルギーよりも少なくする
+- 食後よりも食前に運動する
+
+## メモ
+
 有酸素運動が脂肪を落とす。
 無酸素運動になると脂肪よりも筋肉が落ちやすいので注意。
 
@@ -22,3 +29,6 @@ HIITは数分で効果が出る。
 食後に運動してもインスリンが分泌されていて脂肪燃焼が抑えられている。
 大きな筋肉、複数の筋肉を使うトレーニングの方が脂肪燃焼効果は高い。
 https://youtu.be/Ex2kHW8eE8o?si=vctRY1CJUpYN-JRz
+
+脂肪を落とすには、消費カロリーよりも摂取カロリーが少なければいい。
+ただし、摂取カロリーが低すぎると筋肉量が落ちるので消費カロリーが減って脂肪を落とすのも難しくなる。特に炭水化物とタンパク質。
