--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -1,6 +1,6 @@
 # Humor
 
-滑稽。
+洒落。滑稽。遊び心。茶目っ気。機知。
 
 ユーモアの本質は、ネガティブなことをポジティブに解釈、表現すること。特に表現。
 
@@ -312,3 +312,5 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 馬鹿にされたときとかも笑って馬鹿にするのもユーモア。その人以外を笑わせるのが大事。
 
 ユーモアの基礎には愛がある。
+
+目の前で起きていることを滑稽話にするのがユーモア。失敗を滑稽なものにする。笑いに変える。
