--- a/shared/information/事実.md
+++ b/shared/information/事実.md
@@ -1,6 +1,7 @@
 # Fact
 
-偽造 Fake でないもの。
+何があったか。
+特に、偽造されていないもの。
 
 仮定していない、確定したもの。
 
@@ -26,3 +27,5 @@
 事実は知識の文脈かも。
 
 出来事は客観的だけど、思考や感覚などの体験は主観。
+
+事実は、単純に「出来事」「何があったか」と考えた方がいいかも。
