--- a/shared/sports/スポーツ.md
+++ b/shared/sports/スポーツ.md
@@ -1,3 +1,6 @@
+- 参戦（プレイング）
+- 観戦（ビューイング）
+
 気軽に始めやすいのは、まず接触しないスポーツ。
 サッカーやバスケなどは接触があるので、体や骨が弱いなら避ける。
 
@@ -20,3 +23,5 @@
 
 どこを見るのか。
 どこを楽しむのか。
+
+スポーツ観戦は基本的にエンタメの一種。
