--- a/shared/trust/intimacy/tips/好意を示す.md
+++ b/shared/trust/intimacy/tips/好意を示す.md
@@ -11,10 +11,13 @@
   - 隣に座る
 - 帰ろうとするのを引き止める
 - スマホの画面を見せる
+- 言葉を崩す
 - 言葉で伝える
   - 「仲良くなりたい」
   - 「好き」
 - 秘密を共有する
+  - 悩みや弱みを見せる
+  - 悪事の共犯になる
 - 遊びやデートに誘う
 
 ## その他
@@ -41,3 +44,7 @@
 恋人になりたい人と友人になりたい人では距離の詰めかたが違う。ただ、関心を示すところは同じ。まずは関心を示すのが基礎。
 
 自分が相手を好きなのはバレた方がいい。でも舐められないようにする。
+
+悪事の共犯になるとか、避けた方がいい方法もある。
+
+相手が親しくなりたいと思ってないのに、急激に距離を詰めるのはむしろ逃げられる。
