--- a/shared/trust/intimacy/誰かと親しくなる.md
+++ b/shared/trust/intimacy/誰かと親しくなる.md
@@ -1,6 +1,11 @@
+## 基本方針
+
 - 自分から近づく
 - 相手から近づいてくる
   - 相手を誘う
+- 相手に逃げられないようにする
+  - 害さない
+  - 急激に近づきすぎない
 
 ## 親しくなるまでの過程
 
@@ -276,3 +281,6 @@ https://www.total-marriage.com/column/1644/
 友人も恋人も親しくなるって方向性は近いけど、友人のゴールは気を遣わなくなること、恋人のゴールは子どもを作って育てることだ。
 
 親しくなるには興味よりも関心が必要。
+
+歳の差があると、自分がタメ口で喋っても相手がタメ口にしない。
+とはいえ、自分だけでもタメ口の方が両方敬語よりはまだいい。相手も慣れたらタメ口にしてくれるかもしれない。
