--- a/shared/collaboration/organization/組織の文化.md
+++ b/shared/collaboration/organization/組織の文化.md
@@ -12,3 +12,7 @@
 初代君主は統治制度を整えて二代目に引き継がないと長続きしない。
 
 組織の哲学、コンセプト、ビジョン、などが同じ概念を指しているが、本質としては文化や習慣だ。普段からどのように振る舞っているか、それだけでしかない。言葉だけでは意味がないけど、言葉で伝えて態度で示して広まっていくものでもある。
+
+曖昧な表現が悪いのではなくて、曖昧な表現の意味を曖昧なままにして、コミュニティで統一してないのが悪い。
+これは文化形成の問題。コミュニティでは統一言語を使うべき。
+表現自体は一言で複雑な概念を説明できるから便利なものでしかない。
