--- a/shared/sex/tips/男女の違い.md
+++ b/shared/sex/tips/男女の違い.md
@@ -8,6 +8,9 @@
 
 男の価値は、雑に扱えるところ。
 
+男性は活動によって友達が異なる。興味が同じじゃないと関わりが減る。
+恋人と子どもを作るまでは女性に合わせることもあるけど、家族になったら「一人で行ってきていいよ」になる。
+
 ## Female
 
 「男は論理的、女は感情的」というのは「女は知能が低い」のマイルドな言い方。
