--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -198,3 +198,7 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 つまんない友達を呼ぶ人もつまんないと思われる。
 
 社交ができてないのは、まずその場の空気を良くしようとしてない人。飽きたら携帯見るとか。パッと時間やメッセージを確認したりするのはいいけど、飽きた感を出したらダメ。
+
+自分の興味があることにしか興味がなくて人間に興味がないと、人間と付き合っていくのは難しい。まぁ、一人でも平気だとか、他人を利用するつもりがないならそれでもいい。
+
+相手には興味がないけど心理学や会話などの形式に興味があって人と付き合っている人もいる。
