--- a/shared/finance/資本.md
+++ b/shared/finance/資本.md
@@ -67,4 +67,6 @@ capital はどちらかというと「元手」が近い。
 プレイヤーとしてトップでない人が大きく稼ぐには金持ちとつながって資本を増やすのが大事。
 融資もあるし、人を紹介してもらうこともある。
 
-資本がないと自分で稼ぐしかない。
+資本がないと自分が動いて稼ぐしかない。
+
+経済が大きくなる限り、資本は相対的に減っていく。稼ぎ続けないといけない。
