--- a/shared/human/body/muscle/training/tips/脚を細くする.md
+++ b/shared/human/body/muscle/training/tips/脚を細くする.md
@@ -4,3 +4,10 @@ https://x.com/nakisyozyo/status/2013507283955679420?s=12
 
 股関節を動かして太ももや尻を細くするトレーニング。
 https://x.com/nakisyozyo/status/2014541598990991462?s=12
+
+https://twitter.com/diet50_38/status/1637406533565952007
+
+筋肉をつけすぎると細くならない。特にふくらはぎは控えめに。
+
+太ももや尻の脂肪を落とすのが大事。
+ただ、太ももは筋肉が落ちてしまうとエネルギー消費が減って太りやすくなる。
