--- a/shared/lifestyle/clothing/tips/脚を長く見せる.md
+++ b/shared/lifestyle/clothing/tips/脚を長く見せる.md
@@ -18,3 +18,5 @@ https://youtube.com/shorts/s6Zy3F7Dy-M?si=SMF-7aA73v1uGsDA
 タックインするより短丈の方がカジュアルに見える。丈は短いけど裾は出ている。
 
 ボトムスは横に広い方が脚長に見えるのはなんでだろう？
+
+タックパンツはハイウエストでタックインする使い方が基本。ベルトで高い位置に留めて、シャツの裾はズボンに入れる。
