--- a/shared/risk/lucky/運を良くする.md
+++ b/shared/risk/lucky/運を良くする.md
@@ -21,3 +21,7 @@
 
 3回やって2回成功するより、100回やって10回成功する方が5倍優れている。
 成功は確率じゃなくて回数。
+
+運がいい人というのは「自分は運がいい」と思える良い情報を積極的に探す人。
+
+運がいいと思うことで運が良くなるというよりは、運が良いと思える情報を探す。
