--- a/shared/sex/tips/男女の違い.md
+++ b/shared/sex/tips/男女の違い.md
@@ -48,3 +48,5 @@ https://x.com/karasu_pua/status/1937868155831152821?s=12
 
 男女で体の重心が結構違う。
 https://x.com/vismoglie/status/2016658222862540809?s=46
+
+男は抱きたい女と家族になりたい女が違って当たり前なんだけど、女はあんまりそういう傾向がない印象。抱かれたい男と家族になりたがる。
