--- a/shared/sex/性欲.md
+++ b/shared/sex/性欲.md
@@ -37,3 +37,5 @@
 ただ、子供を育てられないから作れないことはある。それを欲しくないと言い張ってる可能性はある。
 
 「男は脳が1つで玉が2つだからいつも3:0の多数決で煩悩が理性を上回ってしまう」は草。
+
+性欲って生物としては子ども作りたいってことなので、性欲が強い人じゃないとあまり恋愛する意味もないし、そういう男は浮気するってのもある。そういう意味ではやっぱお見合いで結婚する時代が正しかった説はある。
