--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -155,3 +155,5 @@
 男の場合、子供だけ作って捨てて母親が育てなくても別の女と子供を作るのも容易。
 
 男性は女性よりも相手を恋人として見る期間が少ないバグがある。その間に家族や友人としての地位を築かないと捨てられる。
+
+恋愛や結婚では、最初に一番厳しいことを話しておく。仲がいいうちに準備する。
