--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -279,3 +279,5 @@ https://youtu.be/6ppS_HSlozM?si=kcE2drhJdUFLMUyA
 あくびみたいな声になるのは舌や顎で喉を下げてるから。喉は首で下げて、舌や顎には力を入れない。
 
 あくびのフォームで声を高くするのを試して、このような感覚で高くするのは避ける。舌や顎で喉を下げると喉の奥が狭くなって響きが悪い。
+
+おじいちゃんの力の抜けたガラガラ声はある意味目指すところかも。声帯が衰えているものの、力が抜けて喉が開いている。
