--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -191,3 +191,8 @@ loveもworkも利害関係は別で、careにあるのかも。
 人以外よりも、人を優先するべき。
 
 情というのは優先順位。
+
+揉め事や面倒を嫌う、事なかれ主義、というのは情がないと思われる。
+自己防衛も情の観点からすると良くない。
+
+誰かの面倒を見ること。見ようと思うこと。
