--- a/shared/finance/資本.md
+++ b/shared/finance/資本.md
@@ -70,3 +70,8 @@ capital はどちらかというと「元手」が近い。
 資本がないと自分が動いて稼ぐしかない。
 
 経済が大きくなる限り、資本は相対的に減っていく。稼ぎ続けないといけない。
+
+資本は使わないと意味がない。
+
+金持ちであり続けるには稼ぎ続けないといけない。資産があるから稼ぎやすいけど、休みはない。
+そうやって走り続けるエネルギーがない人は金持ちに向いてないし、エネルギーがあってもそこそこしか稼げない人は無駄だからそこそこでいていいと思う。
