--- a/shared/game/competitive/優位性を示す.md
+++ b/shared/game/competitive/優位性を示す.md
@@ -36,3 +36,6 @@
 優位性を示すのはマウントだけじゃない。
 
 相手を見下すってことは相手を人として見ている部分があるので、ある程度の情はある。
+
+他人の幸せな話を「マウント」と受け取る人もいる。
+そういう人は人間関係を対戦ゲームだと思っていて足を引っ張るので切った方がいい。
