--- a/shared/training/tips/癖を抜く.md
+++ b/shared/training/tips/癖を抜く.md
@@ -44,3 +44,5 @@
 習慣は上書きしかできない。
 悪い習慣を直すには、同じトリガーを持った別の行動で上書きするしかない。
 例えば寝る前に動画を見てしまうのを直すなら、「動画を見るのをやめる」のではなく「リラックスできる音楽を流す」のような別の行動に置き換える。
+
+癖は他人から指摘してもらわないと気づけないことがある。
