--- a/shared/finance/資本.md
+++ b/shared/finance/資本.md
@@ -3,6 +3,8 @@
 広義では、ビジネスで使えるものは全部資本。人間や設備も。
 狭義では、事業活動の元手となる資金のこと。
 
+資源の一種。
+
 具体的には、現金、設備、不動産、株式、債券、特許権、ブランド、知的財産など。不労所得を得られる資産も。
 
 金融資本、物的資本、人的資本に分けることが多い。
