--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -35,3 +35,9 @@ https://crowdworks.jp/
 https://youtube.com/watch?v=lEixj4MSNAo&si=LHL_AcQ90Wnk9lpn
 
 顧客は少ない方が、リソースを集中できる。
+
+目標の売り上げに対して何件の受注で達成するか、を割り算で考える。これでリアリティが上がる。
+1件受注した時点で単価が足りなかったら「このままでは目標に届かない」ことがわかる。あるいは1件も受注できなかったら「単価が高すぎる」とか「売り先が悪い」とか考えられる。
+
+セールスが絶対に必要。
+優秀なセールスを仲間にできなかったら自分でやるしかない。
