--- a/shared/care/tips/関心をひく.md
+++ b/shared/care/tips/関心をひく.md
@@ -125,3 +125,10 @@
 
 「みんなの花壇を踏み荒らした人が注目を集めているとき、踏み荒らした人が自分には注目を集める力があると感じたりするけど、みんなの興味関心があるのは実際は花壇の方であって、その人ではないというすれ違いがある」
 https://x.com/masillo/status/478575781933621248
+
+塾講師なんかは相手が関心を持って聞きにくる場合が多いので、話自体が重要。
+でも、芸人なんかは相手が話を聞く席に座ってもらう、スマホから顔を上げてもらう、という段階がある。
+
+関心は集めるものかも。popularも関連する。
+
+人気者は関心を集めやすい。知っているから話を聞こうとする。
