--- a/shared/care/面倒.md
+++ b/shared/care/面倒.md
@@ -1,5 +1,7 @@
 # Trouble
 
+面倒。トラブル。
+
 手間や時間がかかること。
 
 相手に嘘をつくのも情。嘘は真実よりも手間がかかる。
@@ -7,3 +9,5 @@
 めんどくさがりは情が薄い。
 少なくとも大切な人に手を抜いてはいけない。
 好きなタイプに「めんどくさくない女」とか言ってたらだめ。
+
+「人が増えるほどトラブルが増える」「一人でいる人は喧嘩しない」（渋谷ハル）
