--- a/shared/commerce/sales/セールス.md
+++ b/shared/commerce/sales/セールス.md
@@ -54,3 +54,12 @@
 
 松竹梅の商品があったら最終的に竹を売るものであって、松を売るものだと思っているとうまくいかない。普通、松竹梅とあるのは竹を買わせるため。
 もちろん松を買ってくれたら一番いいけど、第一の目標ではない。松と梅をうまく比較に使って、竹を売る。
+
+新規顧客を獲得するのが上手い人、既存顧客を囲い込むのが上手い人、とセールスにも得意分野がある。
+
+大きい会社だとセールスの段階や作業ごとに部署やチームが分かれていることもある。
+
+まずは1件でも受注するのが大事。
+1000件連絡して1件受注でも、10件連絡して1件受注でも、同じ時間と手間でできるならどっちでもいい。結果の数が大事。
+
+絶対に買ってくれる人を想定して、その人に真っ先に届けるのが基本。
