--- a/shared/sex/dating/tips/恋人を選ぶ.md
+++ b/shared/sex/dating/tips/恋人を選ぶ.md
@@ -77,3 +77,5 @@ https://x.com/ameria86922441/status/2017838100442218779?s=12
 5. 価値観や興味が似ている
 
 https://youtube.com/watch?v=SED4dF1kmZQ&si=YkAXIVfLuSENe9zv
+
+子供が欲しいなら女性側は30歳以下の方が有利。単純に35歳を過ぎると妊娠しにくくなる。
