--- a/shared/home/家庭.md
+++ b/shared/home/家庭.md
@@ -1,4 +1,6 @@
-# 家庭
+# Home
+
+家庭。
 
 職場、Workとの対応関係。
 
@@ -15,3 +17,10 @@
 ホームは安らぎを与える場所であるべき。
 
 ホームは安らげる場所、安息の地でないといけない。
+
+心休まらない人を家に上げない。
+友人はまぁほどほどの付き合いなら家に上げなくてもいいけど、恋人は家に上げることになる。心休まる人を選ぼう。
+
+戻ってくる、帰ってくるところ。
+
+実家のような安心感。
