--- a/shared/lifestyle/clothing/tips/自分に似合う服.md
+++ b/shared/lifestyle/clothing/tips/自分に似合う服.md
@@ -1,3 +1,19 @@
 どうやって自分に似合う服を選べばいいか。
 
 友人や店員さんに見てもらった方がいい。
+
+コントロールしやすいところ:
+
+- 髪
+- 化粧
+- 服
+- 靴
+- 小物
+
+コントロールしにくいところ:
+
+- 顔
+- 体型
+
+まずはコントロールしやすいところをコントロールしにくいところに合わせた方がいい。
+その上で、コントロールしにくいところも変えられるなら変えてもいい。痩せるとか、筋肉をつけるとか。
