--- a/shared/trust/intimacy/誰かと親しくなる.md
+++ b/shared/trust/intimacy/誰かと親しくなる.md
@@ -284,3 +284,11 @@ https://www.total-marriage.com/column/1644/
 
 歳の差があると、自分がタメ口で喋っても相手がタメ口にしない。
 とはいえ、自分だけでもタメ口の方が両方敬語よりはまだいい。相手も慣れたらタメ口にしてくれるかもしれない。
+
+パブリックな会話をいくら続けても親しくなれない。
+ただ、楽しませることで好かれることはある。相手から親しくなろうとしてくれることはある。
+相手を楽しませてから、プライベートな話題やディープな価値観の話題で親しくなる。
+
+親しくなるためには、相手に好かれてから、親しくなったように接すればいい。
+
+好かれてもいないのに親しく接してもうっとうしいだけ。
