--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -41,3 +41,5 @@ https://youtube.com/watch?v=lEixj4MSNAo&si=LHL_AcQ90Wnk9lpn
 
 セールスが絶対に必要。
 優秀なセールスを仲間にできなかったら自分でやるしかない。
+
+今日、1000円稼げない人はビジネスに向いてない。就職しよう。
