--- a/shared/care/tips/関心をひく.md
+++ b/shared/care/tips/関心をひく.md
@@ -132,3 +132,5 @@ https://x.com/masillo/status/478575781933621248
 関心は集めるものかも。popularも関連する。
 
 人気者は関心を集めやすい。知っているから話を聞こうとする。
+
+面倒を見てもらう、関心を集めるためにどうするか。
