--- a/shared/communication/media/language/learning/言語を覚える.md
+++ b/shared/communication/media/language/learning/言語を覚える.md
@@ -8,3 +8,5 @@
 言語の習得はまず知っていることに集中して、わからないことがあれば後で調べられるようにメモするか、相手がいるなら教えてもらってもいい。
 
 外国語は母語に訳さずに理解した方がいい。ベースの意味は覚えるけど、訳さない。
+
+外国語学習は単語を増やしつつ独り言のパターンを増やすのが大事。
