--- a/shared/care/関心.md
+++ b/shared/care/関心.md
@@ -228,3 +228,6 @@ careの関心は注意の方が近いかも。mindとも近い。
 関心を忘れられないと逃げた意味がない。逃げ切ったとは言えない。逃げても関心があるなら何らかの不安要素がある。
 
 恨みや憎しみも関心。
+
+配信者とかに炊いてる人いるけど、個人的には檻の中の話だからそこまで関心がない。
+世の中にはYouTubeを動物園として見ている人とそうでない人がいるらしい。
