--- a/shared/sex/dating/tips/相手に異性として意識させる.md
+++ b/shared/sex/dating/tips/相手に異性として意識させる.md
@@ -14,3 +14,5 @@
 
 結婚したり交際したりした場合の未来を連想させるのも大事。
 理想のデートの話をしてから、自分とならどう？とか言ってみるとか。
+
+異性として意識させるには恋人を目指す好意、恋愛感情を暗に示せばいい。あるいは恋愛の話から自分でも想像してもらって、恋愛を想像させる。
