--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -97,3 +97,5 @@
 恋愛の期間は恋人を選ぶ期間だけど、選んだ後は評価しないで愛さないといけない。判断と同じ。判断が終わったのに迷うのは非効率。
 
 根本的に人に興味や関心がないと恋愛は厳しい。家同士の結婚ならあるけど、それは恋愛ではないし。
+
+恋愛は親密さの延長、あるいは信頼の延長にある。
