--- a/shared/sex/tips/男女の違い.md
+++ b/shared/sex/tips/男女の違い.md
@@ -40,6 +40,8 @@ https://x.com/karasu_pua/status/1937868155831152821?s=12
 
 女を幸せにしたくても女は幸せになりたいと思ってない。実質不幸を求めている。
 
+女さんってサル山でサルと目を合わせないのを「怯え」だと思ってるんだ。
+
 ## その他
 
 生物的には、卵子（大きく移動性の低い配偶子）を持っているほうがメスで、そうでないほうがオス。
