--- a/shared/trust/intimacy/tips/好意を見分ける.md
+++ b/shared/trust/intimacy/tips/好意を見分ける.md
@@ -2,3 +2,9 @@
 とりあえず会話としては話を拾う、話を振る、ってのが基本なんだけど、相手から質問されないとどれだけ盛り上がっても好意は持たれてないかも。
 
 自分が相手に頼った時に助けてくれるかどうかでも好意や敬意がわかる。
+
+デートを断られているのに恋愛話とかしても仕方ない。
+
+デートしてくれるなら最低限の関心や好意はあるので、もうわりと踏み込んでいい。
+
+コンカフェやキャバクラみたいにお金で関心や好意を買っている場合もある。
