--- a/shared/aesthetics/美.md
+++ b/shared/aesthetics/美.md
@@ -77,3 +77,5 @@
 美しいとは頭の中の「あるべき姿」に近いということ。結果的に親近感が湧くし、正しいと感じる。
 
 美には信頼の要素がある。特に一貫性。芯がある。
+
+洗練されていて「美しい」というのも基本的に「怪しくない」ってこと。怪しい人かどうかを判断できれば美しいかどうか判断できる。
