--- a/shared/people/appearance/身なり.md
+++ b/shared/people/appearance/身なり.md
@@ -14,3 +14,5 @@
 服だけでなく、髪や顔つきにもフォーマル/カジュアルや男性的/女性的などの印象がある。
 
 身なりは「似合っている」のが一番オシャレ。全体の総合力。
+
+身なりはまず状況に合わせて、相手に合わせるのが基本。葬式にパンクロックとか、相手は普通の服なのに自分だけ原宿系とかはダサい。
