--- a/shared/care/tips/関心を示す.md
+++ b/shared/care/tips/関心を示す.md
@@ -4,8 +4,9 @@
 
 ## Good
 
-- 目を離さない
 - 目を合わせる
+  - 何度も目を合わせる
+  - 目を離さない
 - 微笑みかける
 - 話を振る
 - 相手の話を聞いている姿勢を示す
@@ -163,3 +164,6 @@
 感謝と伝える時は、絶対に目を合わせるべき。
 
 気遣いは助けてあげるだけじゃなくて、相手を大切にする。
+
+何度も目が合うのは関心を示す。
+人によっては目を合わせるのが苦手ですぐ逸らす人もいる。
