--- a/shared/care/関心.md
+++ b/shared/care/関心.md
@@ -231,3 +231,7 @@ careの関心は注意の方が近いかも。mindとも近い。
 
 配信者とかに炊いてる人いるけど、個人的には檻の中の話だからそこまで関心がない。
 世の中にはYouTubeを動物園として見ている人とそうでない人がいるらしい。
+
+関心があっても、干渉し過ぎるとめんどい。
+
+関心があっても文句や助言ばっかり言っているとうざがられる。干渉するのではなく、褒める。
