--- a/shared/engagement/愛着.md
+++ b/shared/engagement/愛着.md
@@ -46,3 +46,5 @@
 愛着がないと、「頼られてるから辞めない」ってことがない。頼られていても自分にとって価値がなくなったら辞める。だから、最悪の事態の時に信頼できない。
 
 ある種の責任感。
+
+「お前は自分勝手なのよ。怒られないために振る舞うけど根本的にチームに歩み寄るわけじゃない。」『ゼロとヒャク』
