--- a/shared/human/body/muscle/training/tips/続けやすい筋トレ.md
+++ b/shared/human/body/muscle/training/tips/続けやすい筋トレ.md
@@ -5,3 +5,12 @@
 - 立ち腹筋
 
 動画とかテレビとか。
+
+## 寝たままできる
+
+- 仰向けになって両足を伸ばしたまま斜めに上げる
+- 仰向けになって膝を立てて足を閉じたり開いたりする
+- うつ伏せになってバタ足する
+- 横向きになって足を伸ばしたまま閉じたり開いたりする
+
+仰向けになって膝を立てて足をパタパタ開いたり閉じたりするだけでも筋トレになる。太ももの内側が少しだけ鍛えられる。
