--- a/shared/mood/happy/praise/褒められる.md
+++ b/shared/mood/happy/praise/褒められる.md
@@ -16,3 +16,7 @@ https://youtu.be/EOIQlVc95uI?si=RMSPd8iTKHherdPZ
 自分でも満足していないと褒められても受け取れないことがあるけど、相手を否定してはいけない。
 
 「モテそうだね」とかは大体建前なので「そうですね、100人待ちですよ」とかオーバーに軽く受け取る。
+
+褒められるのが好きにも2種類ある。
+「相手の役に立った」のが嬉しい人と、「自分の成長を感じる」のが好きな人。
+後者は根本的に相手がどうだろうと関係ない。
