--- a/shared/business/ending/撤退.md
+++ b/shared/business/ending/撤退.md
@@ -1,1 +1,5 @@
 会社全体として廃業するわけではなくても、特定の事業から撤退することはある。
+
+Yahoo!では、少数の熱狂的な顧客がいるかどうかで判断するために、満点をつけた人が全体の4%以上存在しないと足切りするみたい。
+平均点ではなく熱狂的なファンを探るインタビュー。
+https://x.com/u2qshinshiro/status/2019202361726796272?s=46
