--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -43,3 +43,6 @@ https://youtube.com/watch?v=lEixj4MSNAo&si=LHL_AcQ90Wnk9lpn
 優秀なセールスを仲間にできなかったら自分でやるしかない。
 
 今日、1000円稼げない人はビジネスに向いてない。就職しよう。
+
+平均点のビジネスは誰にも刺さらない。
+誰でも80点をつけるようなサービスではなく、ごく一部が100点をつけるサービスを目指す。
