--- a/shared/care/関心.md
+++ b/shared/care/関心.md
@@ -235,3 +235,8 @@ careの関心は注意の方が近いかも。mindとも近い。
 関心があっても、干渉し過ぎるとめんどい。
 
 関心があっても文句や助言ばっかり言っているとうざがられる。干渉するのではなく、褒める。
+
+関心があると反応を先読みできることがある。
+
+道を歩くときは周りの人にぶつからないように最低限の関心を持って歩いている。
+それすらできない人は何をやってもダメ。
