--- a/shared/voice/training/tips/息が鼻に抜けないようにする.md
+++ b/shared/voice/training/tips/息が鼻に抜けないようにする.md
@@ -4,3 +4,9 @@
 口を大きく開けたまま、喉を動かさずに横隔膜または腹筋だけで息を吸ったり吐いたりする。
 
 鼻に抜けるとまた裏声とはちょっと違った声になる。本来の鼻腔共鳴が邪魔されてるのかも。
+
+声を出しながら口を閉じて「んー」にしても響きが変わらないまま出せるなら、普段の声がそもそもハミングみたいに鼻に抜けてしまっている。
+
+喋っていてそのまま口を完全に閉じれるならハミングで喋ってる。鼻に抜けてる。
+
+口を少しだけ開いて息を抑えずに声を出した際に、唇にも圧を感じないとおかしい。口よりも鼻に抜けている。
