--- a/shared/voice/声の属性.md
+++ b/shared/voice/声の属性.md
@@ -26,6 +26,11 @@
   - テンション（キー）
 - ピッチ
 - タメ
+- 声帯の位置 (ポジション)
+- 声帯の張力
+- 息の圧
+- 息の量
+- 喉の高さ
 - 声色（雑音の混ざり具合、響き）
 
 ## 英語
@@ -41,3 +46,6 @@
 声が不安定に揺れるとハスキーボイスだったり弱々しい声になったりする。
 
 声帯のテンションが
+
+喉の高さも声に影響がある。
+喉が下がっていると喉で音が響いて柔らかく、低くなる。無理に喉を下げようとすると軟口蓋が下がって暗くなる。
