--- a/shared/voice/声.md
+++ b/shared/voice/声.md
@@ -124,3 +124,6 @@ speaking と singing は別に分けなくていいかも。
 速い曲ほど軽い声で歌わないとキレが悪い。
 
 拡声器は3000-5000円くらいで買える。会社などで「声が小さい」と言われたら使うといい。
+
+楽な声の出し方が変わると普段の話し声も変わる。
+あとそもそも普段の話し方を歌と同じように意識して出した方が鍛えられる。
