--- a/shared/voice/training/tips/息が鼻に抜けないようにする.md
+++ b/shared/voice/training/tips/息が鼻に抜けないようにする.md
@@ -1,3 +1,12 @@
+## 鼻に抜けていないかチェックする
+
+以下のいずれかに当てはまるなら鼻に抜けている。
+
+- 鼻を摘んで声を出すと響きが変わる (鼻声になる)
+- 口を閉じて声を出しても響きが変わらない (ハミングになる)
+
+## その他
+
 鼻に息が抜けないようにする。
 
 軟口蓋を閉める、口から吐いて口から吸う練習。
