--- a/shared/humor/個性.md
+++ b/shared/humor/個性.md
@@ -35,3 +35,6 @@
 特技は個性になりやすい。
 
 個性というのは卓越したものを指すのであって、底辺プレイヤーに個性とかないし、いらない。まずは基本的な動きができるようになってから考えることだ。
+
+基礎がないと個性は出ない。
+自己流の人はだいたい似たような人になる。大して伸びてない。まず基礎を勉強したり、専門家に教えてもらったりするところから始める。
