--- a/shared/sex/dating/tips/恋人を選ぶ.md
+++ b/shared/sex/dating/tips/恋人を選ぶ.md
@@ -79,3 +79,6 @@ https://x.com/ameria86922441/status/2017838100442218779?s=12
 https://youtube.com/watch?v=SED4dF1kmZQ&si=YkAXIVfLuSENe9zv
 
 子供が欲しいなら女性側は30歳以下の方が有利。単純に35歳を過ぎると妊娠しにくくなる。
+
+3泊以上の旅行は同棲よりも手軽で本性を見やすい。
+疲れて意識的な気遣いが難しくなるので、習慣的な気遣いを見る。
