--- a/shared/thinking/tips/深く考える.md
+++ b/shared/thinking/tips/深く考える.md
@@ -2,9 +2,6 @@
 
 深掘りする質問
 
-どうして？
-どうしたい？
-
 教育などで特定の思考を促す場合、必要な問いを繰り返し与えることで自ずと問うようになる。
 
 質問のリストと十分な知識を与えれば似たような思考に近づけられるはず。
@@ -26,3 +23,6 @@
 
 - 具体的には？
 - その時何を考えていたか
+
+- もしも
+- たとえば
