--- a/shared/care/関心.md
+++ b/shared/care/関心.md
@@ -240,3 +240,6 @@ careの関心は注意の方が近いかも。mindとも近い。
 
 道を歩くときは周りの人にぶつからないように最低限の関心を持って歩いている。
 それすらできない人は何をやってもダメ。
+
+関心というのは根本的に利害関係があるものに抱くものなので、どちらかというと利用しようと思っている。
+相手が自分に関心があるからと言って喜ぶ感覚がいまいちわからない。
