--- a/shared/care/面倒.md
+++ b/shared/care/面倒.md
@@ -1,6 +1,6 @@
 # Trouble
 
-面倒。トラブル。
+面倒。トラブル。迷惑。
 
 手間や時間がかかること。
 
@@ -11,3 +11,5 @@
 好きなタイプに「めんどくさくない女」とか言ってたらだめ。
 
 「人が増えるほどトラブルが増える」「一人でいる人は喧嘩しない」（渋谷ハル）
+
+迷惑をかける、面倒を見てもらう、というのは感謝によって相手に自信を持たせることがある。
