--- a/shared/lifestyle/clothing/服の要素.md
+++ b/shared/lifestyle/clothing/服の要素.md
@@ -1,3 +1,5 @@
+## 服
+
 - アウター
 - トップス: 上半身
 - ボトムス: 下半身
@@ -5,3 +7,19 @@
   - 鞄
   - 靴
   - 装飾品
+
+## 服以外
+
+- 服飾品・アクセサリー
+  - 靴
+  - 鞄
+  - 帽子・冠
+  - 髪飾り
+  - 眼鏡・サングラス
+  - 耳飾り
+  - 首飾り
+  - 腕輪
+  - 足輪
+  - 指輪
+  - 手袋
+  - 靴下
