--- a/shared/lifestyle/clothing/服の違い.md
+++ b/shared/lifestyle/clothing/服の違い.md
@@ -28,30 +28,46 @@
   - 和服
   - その他の民族衣装
 
-## 形
+## 形の違い
 
-- 服
-  - トップス
-    - カットソー
-  - ボトムス
-    - パンツ
-    - スカート
-  - ワンピース
-- 服飾品・アクセサリー
-  - 靴
-  - 鞄
-  - 帽子・冠
-  - 髪飾り
-  - 眼鏡・サングラス
-  - 耳飾り
-  - 首飾り
-  - 腕輪
-  - 足輪
-  - 指輪
-  - 手袋
-  - 靴下
+### シルエットの違い
 
-頭が大きいなら、厚手のジャケットやパーカーで肩幅を広げるとバランスがいい。
+- トップス
+  - シャツ
+    - Tシャツ・カットソー
+    - ワイシャツ
+    - ブラウス
+  - セーター
+  - カーディガン
+  - パーカー
+  - アウター
+    - コート
+    - ジャケット
+    - ブルゾン
+- ボトムス
+  - パンツ
+    - ストレート: 直線的な基本形
+      - テーパード: 腰から裾に向かって細くなる
+      - ワイド: 腰から裾に向かって広くなる
+    - フレア: 裾だけが広い
+    - バギー: 過剰に膨らんでいてだぼっとしてシワがよる
+    - スキニー: 全体的に細くて足にフィットする
+  - スカート
+    - タイト
+    - フレア
+      - マーメイド: 膝までタイトなフレア
+    - プリーツ: ひだが入っている
+    - ティアード: 段々になっている
+    - バルーン: 裾を絞って膨らんでいる
+    - アシンメトリー: 裾の長さが場所によって異なる
+- ワンピース: トップス + スカート
+
+### 袖の長さの違い
+
+- 長袖
+- 半袖
+  - 七分丈
+- 袖なし
 
 ## 色
 
@@ -124,3 +140,20 @@ https://ja.wikipedia.org/wiki/%E5%B9%B3%E7%B9%94
 
 装飾品や宝飾品は服飾品の一種。
 装飾品は特に美しさを持つもの。宝飾品は特に金属や宝石によるもの。
+
+アウターはトップスの一種だけど、特に上着。
+コート、ジャケット、ブルゾン、など。
+
+- シルエット
+- 構造的特徴
+  - 素材
+    - 織り方・編み方
+  - 縫製方法
+  - 襟の形
+  - 襟の仕上げ
+  - 裾や袖の仕上げ
+  - 丈
+    - 裾の長さ
+    - 袖の長さ
+- 用途
+- 由来
