--- a/shared/job/hunting/topics/退職理由の例.md
+++ b/shared/job/hunting/topics/退職理由の例.md
@@ -1,7 +1,24 @@
-- 前の会社ではキャリアの限界に達した
-  - 会社に成長する余地が見当たらなかった
-  - 給与が会社の上限近くに達した
-- 働きにくかった
-  - 生活リズムに合わなかった
-  - 上司や同僚と合わなかった
-  - 職場の雰囲気が悪く、改善される余地もなかった
+正直、退職理由なんて大きくいえば三つしかない。
+
+1. 働きにくい（特に上司がやばい）
+2. 給料が安い
+3. 仕事がつまらない
+
+これを詳しく言うと、以下のようになる。
+
+- 働きにくい
+  - 体を壊した
+    - 生活リズムに合わなかった
+    - 上司や同僚と合わなかった
+      - 職場の雰囲気が悪く、改善される余地もなかった
+- 給料が安い
+  - 前の会社ではキャリアの限界に達した
+    - 会社に成長する余地が見当たらなかった
+    - 給与が会社の上限近くに達した
+  - 非正規で将来性がなかった
+- 仕事がつまらない
+  - 技術的、キャリア的に成長の余地がない
+  - 価値の低い仕事が多い
+  - 繰り返し作業が多い
+
+答える前に「面接でよくある建前で大喜利するやつを聞いてますか？それとも素直に価値観を聞いてますか？」って聞いてしまってもいいかも。
