--- a/shared/trust/intimacy/好感.md
+++ b/shared/trust/intimacy/好感.md
@@ -47,3 +47,5 @@ favor には「特別扱いする、贔屓する」意味がある。
 安心感を与えるのも、好感を与えるのも信頼の延長かも。
 
 会社を抜けたりしたあと、退社後、契約終了後にどこかで活躍している人を応援するのは好感度が高い。球団を移籍した選手のお祝いに花を贈るとか。
+
+同じような顔、同じような体型でも、笑顔が可愛い人は魅力がある。相対した時の気分が全然違う。
